# clinical-ai-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/corpus/: README.md
docs/: AGENTS.md  ARCHITECTURE.md  EVALUATION.md  EXTENDING.md  FHIR.md  QUANTUM.md  SESSION_FLOW.md
examples/: run_pipeline.py  sample_output.md
scripts/: build_index.py  run_eval.py  smoke_test_fhir.py
src/clinical_agent/: cli.py  config.py  orchestrator.py  state.py
src/clinical_agent/agents/: assessment.py  curator.py  engagement.py  study_plan.py  work_iq.py
src/clinical_agent/eval/: rag_metrics.py  synthetic.py
src/clinical_agent/fhir/: auth.py  client.py  observation.py  patient.py
src/clinical_agent/models/: citation.py  observation.py  patient.py
src/clinical_agent/rag/: corpus.py  embeddings.py  ingest.py  llm.py  prompts.py  quantum_kernel.py  retriever.py
src/clinical_agent/ui/: citations.py  layout.py
tests/: test_assessment.py  test_dual_citation.py  test_engagement.py  test_fhir_client.py  test_metrics.py  test_patients.py  test_quantum_retriever.py  test_retriever.py  test_synthetic.py  test_work_iq.py
web/: requirements.txt  server.py  space_readme.md
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js  charts.js
