[project]
name = "clinical-ai-agent"
version = "0.1.0"
description = "Patient-grounded, citation-traceable clinical decision support on open standards (SMART on FHIR + transparent RAG)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jeremy Gracey" }]

# Core deps are intentionally light so the repo runs OFFLINE out of the box.
# Heavier integrations (chromadb, langgraph, real LLMs) are optional extras.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Full production stack — install with: pip install -e ".[full]"
full = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "gradio>=4.0",
    "openai>=1.30",
    "anthropic>=0.40",
]
# EXPERIMENTAL quantum-kernel retrieval backend (RETRIEVAL_BACKEND=quantum_kernel).
# A correctness-equivalent demonstrator, not a speedup — see docs/QUANTUM.md.
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
    "qiskit-machine-learning>=0.7",
    "numpy>=1.26",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
clinical-agent-smoke = "clinical_agent.cli:smoke"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
